[package]
name = "stylus-upgradeable-beacon-workshop"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["arbitrum", "ethereum", "stylus", "alloy"]
description = "Stylus Upgradeable Beacon Workshop"

[dependencies]
openzeppelin-stylus = "=0.3.0-rc.1"
alloy-primitives = "=0.8.20"
alloy-sol-types = "=0.8.20"
stylus-sdk = "=0.9.0"
hex = { version = "0.4", default-features = false }

[dev-dependencies]

[features]
default = ["mini-alloc"]
# stylus-sdk/export-abi will be enabled automatically.
export-abi = ["openzeppelin-stylus/export-abi"]
debug = ["stylus-sdk/debug"]
mini-alloc = ["stylus-sdk/mini-alloc"]

[[bin]]
name = "stylus-upgradeable-beacon-workshop"
path = "src/main.rs"

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"

# If you need to reduce the binary size, it is advisable to try other
# optimization levels, such as "s" and "z"
opt-level = 3
